5.0a4 -> 5.0b1:
    - jbj: --rebuilddb has too many NOKEY's using rpmnss. use rpmbc in beta1.
    - jbj: fix: rpmbuild --sign needed to test for password entry.
    - jbj: display the rpmlib Version/Timestamp/Vendor markers lest I forget.
    - jbj: macro expand all scriptlet bodies before execution. W00t!
    - jbj: populate RPMTAG_BUILDMACROS. implementation took 6+ years ...
    - jbj: add %sanitycheck scriptlet to packages. more wiring needed todo++.
    - jbj: add %track section/scriptlet. Hmmm, not in *.rpm content yet, todo++.
    - jbj: add RPMTAG_CLASS as one more spec file tag. arbitrary tag next ...
    - jbj: rpmssl.c w DSA is gud enuf to go into beta1 (but disabled/unused).
    - rse: provide --with-name=NAME Autoconf option to allow packagers to "brand" RPM
    - rse: apply all remaining OpenPKG patches -- fully disabled by default under defined(RPM_VENDOR_OPENPKG)
    - jbj: flesh out rpmssl implementation. DSA seems OK, no clue RSA yet.
    - jbj: flesh out rpmgc implementation. stil buggy ...
    - jbj: stub in rpmgc/rpmssl for gcrypt & openssl signature verification.
    - rse: add XAR support to "devtool standalone"
    - jbj: fix: s/RPM_/RPMLIB_/ in rpmversion.h.in. That should "stick" now.
    - rpm.org: credit for the original NSS hacks.
    - jbj: no-brainer AutoFu for WITH_NSS enabling, add rpmnss.[ch] to rpmio.
    - jbj: tkey indicates functional DSA verification with rpmnss.c.
    - jbj: fix: debug the stoopids in rpmnss.c.
    - jbj: eliminate dueling typdef byte, beecrypt "owns" the typedef.
    - jbj: make sure that yum can upgrade zlib-devel. Trash the DEAD code.
    - jbj: resurrect rpmMergeHeadersFromFD goop. Yah, mon, DEAD code ...
    - jbj: re-add symbols needed for rpm-python import to loader map.
    - jbj: stub in WITH_NSS define to try rpmnss. Yep, borked, but now tested.
    - jbj: complete rpmnss.[ch] implementation (untested).
    - jbj: stub in the rpmnss.[ch] implementation.