@@ -93,7 +93,6 @@
     - jbj: add the wiring for RPMTAG_CLASS as an arbitrary tag.
     - jbj: change RPM_I18NSTRING_TYPE wiring to use arbitrary tag.
     - jbj: hmm RPMTAG_TRACK contents not added to *.rpm yet.
-    - jbj: drill sanitycheck exec into psmStage() like %verifyscript.
     - jbj: add Requires: sanitycheck(N) runtime namespace probe.
 
   o to be resolved before RPM 5.0.0:
